# graphics

./: CMakeLists.txt
src/HW/hw001/: first_rectangle.cpp  triangle.vert
src/HW/hw002/: foo.frag
src/HW/hw003/: first_rectangle.cpp  rectangle.frag  rectangle.vert  three_rectangles.cpp
src/HW/hw003/rotation/: rotation.cpp  squareRotation.vert
src/HW/hw004/: cube.frag  cube.vert  rendering_cube.cpp
src/HW/utils/shader_utils/: creator.cpp  creator.h  reader.cpp  reader.h
src/HW/utils/texture_utils/: texture_creator.cpp  texture_creator.h
